dt10/soft/outputs/f03-dut-python.stderr.txt
  File "dt10/soft/outputs/f03.py", line 2
    def f(, x):
          ^
SyntaxError: invalid syntax
